tests/fixtures/errors/arg_type_mismatch.ore
fn add a:Int b:Int -> Int
  a + b

fn main
  result := add("hello", 42)
  print result
